# aurutilsutils

./: .gitignore  LICENSE  README.md  pyproject.toml
aur/: PKGBUILD
completion/zsh/: _aur-move-helper  _aur-smartsync  _aur-unmanaged
src/aurutilsutils/: move_helper.py  unmanaged.py
src/aurutilsutils/smart_sync/: __main__.py  helpers.py  ninja_gen.py
src/aurutilsutils/utils/: __init__.py  args.py  aurutils.py  errors.py  misc.py  pacman.py  settings.py  shell.py
